<resources>
    <string name="app_name">EchoTrail</string>

    <!-- Login/Registration -->
    <string name="login_desc">Log in to ET!</string>
    <string name="registration_desc">Register for ET!</string>

    <!-- Settings -->
    <string name="my_notes">My Notes</string>
    <string name="notifications">Notifications</string>
    <string name="manage_your_data">Manage Your Data</string>
    <string name="anonymously_by_default">Anonymously by default</string>
    <string name="anonymously_preferences_description">Enable the default setting to post anonymously.</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="default_language">English</string>
    <string name="change_language_success">Language changed successfully! Restart application.</string>
    <string name="sessions_manager">Sessions Manager</string>
    <string name="position">Position</string>
    <string name="confirm_elimination">Confirm delete</string>
    <string name="confirm_elimination_desc">Are you sure to delete?</string>
    <string name="current_session">Current Session</string>

    <!-- Profile -->
    <string name="copy_id">Copy ID</string>
    <string name="published_notes">Published Notes</string>
    <string name="notes_read">Notes Read</string>
    <string name="request_sent">Request Sent!</string>
    <string name="friend">Friend</string>
    <string name="request_keep_page">Stay on the page?</string>
    <string name="request_keep_page_desc">You are about to exit the page and have unsaved changes. Ignore?</string>
    <string name="put_link">Put Link</string>
    <string name="change_password">Change password</string>
    <string name="write_old_password">Put old password</string>
    <string name="write_new_password">Put new password</string>
    <string name="success_change_password">Password cambiata con successo</string>

    <!-- Error message -->
    <string name="error_user_not_logged_in">User not logged in</string>
    <string name="error_location_permission">Location permission denied</string>
    <string name="error_mock_location">Remove mock location</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_cannot_open_link">Cannot open link</string>
    <string name="error_send_friend_request">Error sending friend request</string>
    <string name="error_accept_friend_request">Error accepting friend request</string>
    <string name="error_reject_friend_request">Error rejecting friend request</string>
    <string name="error_remove_friend">Error removing friend</string>
    <string name="error_friend_not_found">Friend not found</string>
    <string name="error_get_pending_requests">Error getting pending requests</string>
    <string name="error_get_friends">Error getting friends</string>
    <string name="error_invalid_data">Invalid data</string>
    <string name="error_invalid_username">Invalid username</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Password must be at least 6 characters long</string>
    <string name="error_invalid_credentials">Incorrect password or email</string>
    <string name="error_save_note_failed">Error saving note</string>
    <string name="error_get_user_read_notes">Error getting read notes</string>
    <string name="error_get_user_notes">Error getting user notes</string>
    <string name="error_position_not_found">Position not found</string>
    <string name="error_change_password">Error while change password</string>
    <string name="error_add_session">Error saving session</string>
    <string name="error_terms_not_accepted">Accept the terms and services</string>

    <!-- General -->
    <string name="link">link</string>
    <string name="note">Note</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="login">Login</string>
    <string name="registration">Register</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="right_arrow">right_arrow</string>
    <string name="add_new_note">Add a new note</string>
    <string name="give_your_memory">Leave your memory here!</string>
    <string name="save">Save</string>
    <string name="notes_found">Notes found</string>
    <string name="search_on_map">Search on the map</string>
    <string name="update_current_position">Update current position</string>
    <string name="publish_anonymously">Publish anonymously</string>
    <string name="add_link">Add a new link to your profile</string>
    <string name="empty_notes_list">No notes available</string>
    <string name="marker">Marker</string>
    <string name="slogan">Let your thoughts travel</string>
    <string name="public_note">Public note</string>
    <string name="private_note">Private note</string>
    <string name="find">Search</string>
    <string name="confirm">Confirm</string>
    <string name="send_request">Send Request</string>
    <string name="dedicated">Dedicated</string>
    <string name="note_shared">Note Shared!</string>
    <string name="is_for">"For: "</string>
    <string name="add">Add</string>
    <string name="abort">Cancel</string>
    <string name="walking_for">Walking is good!</string>
    <string name="walking_for_read">Travel to the location to read the note.</string>
    <string name="friends_empty_list">
        First, send some friend requests and wait for them to be accepted before you can send a private note.
        You can send friend requests by reading a (non-anonymous) note, opening the profile of the sender,
        and clicking the "Send Request" button.
    </string>
    <string name="select_color">Select a color</string>
    <string name="select_icon">Select a icon</string>
    <string name="policy_privacy">
        Accepting the terms of service you agree to the processing of personal data as described in the privacy policy.
    </string>
    <string name="see_the_privacy_policy">https://peppe289.github.io/echo_trail_policy_privacy.md</string>
</resources>