<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <!-- start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="3dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anonymously_by_default"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/anonymously_preferences_description" />
            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchAnonymousToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>
        <!-- end -->

        <!-- start -->
        <LinearLayout
                android:id="@+id/languagesLayout"
                android:paddingHorizontal="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingVertical="12dp">

            <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textStyle="bold" />

            <TextView
                    android:text="@string/default_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            <ImageView
                    android:layout_marginStart="10dp"
                    android:contentDescription="@null"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
        </LinearLayout>
        <!-- end -->

        <!-- start -->
        <LinearLayout
                android:id="@+id/sessionManager"
                android:paddingHorizontal="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingVertical="12dp">

            <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sessions_manager"
                    android:textStyle="bold" />

            <ImageView
                    android:layout_marginStart="10dp"
                    android:contentDescription="@null"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
        </LinearLayout>
        <!-- end -->

        <!-- start -->
        <LinearLayout
            android:paddingHorizontal="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="3dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="titolo impostazione"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Descrizione" />
            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>
        <!-- end -->
    </LinearLayout>
    <include layout="@layout/loading_overlay" />
</androidx.constraintlayout.widget.ConstraintLayout>